--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,25 @@
 /* variáveis */
+@font-face {
+    font-family: "montserrat";
+    src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+    font-style: normal;
+    font-display: swap;
+}
+
 :root{
+    --primary-color:#B81515;
+    --secundary-color:#8F0101;
 
     --background-primary-color: #ffffff;
     --background-secundary-color: #F5F5F5;
     --background-tertiary-color: #000000;
     
-    --button-primary-color:#B81515;
-    --button-secundary-color:#8F0101;
-
     --text-primary-color:#222222;
     --text-secundary-color:#ffffff;
+
+    --title-weight: 700;
+    --text-weight: 400;
+    --menu-text-weight: 500;
 }
 
 *{
