--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,29 @@
 /* variáveis */
 @font-face {
-    font-family: "montserrat";
-    src: url(../fonts/Montserrat-VariableFont_wght.ttf);
-    font-style: normal;
-    font-display: swap;
+  font-family: "montserrat";
+  src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+  font-style: normal;
+  font-display: swap;
 }
 
-:root{
-    --primary-color:#B81515;
-    --secundary-color:#8F0101;
+:root {
+  --primary-color: #b81515;
+  --secundary-color: #8f0101;
 
-    --background-primary-color: #ffffff;
-    --background-secundary-color: #F5F5F5;
-    --background-tertiary-color: #000000;
-    
-    --text-primary-color:#222222;
-    --text-secundary-color:#ffffff;
+  --background-primary-color: #ffffff;
+  --background-secundary-color: #f5f5f5;
+  --background-tertiary-color: #000000;
 
-    --title-weight: 700;
-    --text-weight: 400;
-    --menu-text-weight: 500;
+  --text-primary-color: #222222;
+  --text-secundary-color: #ffffff;
+
+  --title-weight: 700;
+  --text-weight: 400;
+  --menu-text-weight: 500;
 }
 
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
