--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@ header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  position: relative;
 }
 
 .navegation-menu {
@@ -18,6 +19,26 @@ header {
 
 input[type="checkbox"]:checked + nav {
     display: block;
+    position: absolute;
+    top: 100%;
+    left: 0%;
+    width: 100%;
+    text-align: center;
+    background-color: var(--background-tertiary-color);
+    padding-bottom: 5px;
+}
+
+.nav-links{
+ list-style: none;
+}
+
+.nav-links li a{
+    color: var(--background-secundary-color);
+    text-decoration: none;
+}
+
+.nav-links li{
+    margin-top: 16px;
 }
 
 nav {
