--- a/css/hero.css
+++ b/css/hero.css
@@ -1,6 +1,20 @@
-.hero-image{
-    height: 400px;
-    width: 100%;
-    background: url(../img/hero-mobile.jpg) no-repeat;
-    background-size: cover;
+.hero-image {
+  height: 400px;
+  width: 100%;
+  background: url(../img-principal/hero-mobile.jpg) no-repeat;
+  background-size: cover;
 }
+@media screen and (min-width: 768px) {
+  .hero-image {
+    height: 620px;
+    background: url(../img-principal/hero-tablet.jpg) no-repeat;
+    background-size: cover;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .hero-image {
+    background: url(../img-principal/hero-desktop.jpg) no-repeat;
+    background-size: cover;
+  }
+}
+
