--- a/css/hero.css
+++ b/css/hero.css
@@ -4,11 +4,27 @@
   background: url(../img-principal/hero-mobile.jpg) no-repeat;
   background-size: cover;
 }
+
+.hero h2{
+  padding: 88px 24px;
+  margin: 0 ;
+  text-align: center;
+  font-size: 20px;
+  font-weight: var(--text-weight);
+  line-height: 32px;
+}
+
 @media screen and (min-width: 768px) {
   .hero-image {
     height: 620px;
     background: url(../img-principal/hero-tablet.jpg) no-repeat;
     background-size: cover;
+  }
+
+  .hero h2{
+    padding: 88px 60px;
+    font-size: 32px;
+    line-height: 50px
   }
 }
 @media screen and (min-width: 1024px) {
