--- a/css/hero.css
+++ b/css/hero.css
@@ -5,9 +5,9 @@
   background-size: cover;
 }
 
-.hero h2{
+.hero h2 {
   padding: 88px 24px;
-  margin: 0 ;
+  margin: 0;
   text-align: center;
   font-size: 20px;
   font-weight: var(--text-weight);
@@ -21,10 +21,10 @@
     background-size: cover;
   }
 
-  .hero h2{
+  .hero h2 {
     padding: 88px 60px;
     font-size: 32px;
-    line-height: 50px
+    line-height: 50px;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -32,5 +32,8 @@
     background: url(../img-principal/hero-desktop.jpg) no-repeat;
     background-size: cover;
   }
-}
 
+  .hero h2 {
+    padding: 120px 104px;
+  }
+}
