--- a/css/hero.css
+++ b/css/hero.css
@@ -3,6 +3,7 @@
   width: 100%;
   background: url(../img-principal/hero-mobile.jpg) no-repeat;
   background-size: cover;
+  background-position: center center;
 }
 
 .hero h2 {
@@ -19,6 +20,7 @@
     height: 620px;
     background: url(../img-principal/hero-tablet.jpg) no-repeat;
     background-size: cover;
+    background-position: center center;
   }
 
   .hero h2 {
@@ -31,6 +33,7 @@
   .hero-image {
     background: url(../img-principal/hero-desktop.jpg) no-repeat;
     background-size: cover;
+    background-position: center center;
   }
 
   .hero h2 {
