--- a/css/global.css
+++ b/css/global.css
@@ -29,18 +29,24 @@
   font-family: "montserrat";
 }
 
-.section-title h2{
+.section-title h2 {
   font-size: 28px;
   font-weight: var(--title-weight);
   margin: 0;
   text-align: center;
-  padding: 0 24px;
+  padding: 88px 24px 0;
 }
 
-.section-title hr{
+.section-title hr {
   width: 180px;
   height: 4px;
   margin: 16px auto 32px;
   background-color: var(--primary-color);
   border: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .section-title h2 {
+    padding: 104px 24px 0;
+  }
 }
