--- a/css/hero.css
+++ b/css/hero.css
@@ -7,7 +7,7 @@
 }
 
 .hero h2 {
-  padding: 88px 24px;
+  padding: 88px 24px 0;
   margin: 0;
   text-align: center;
   font-size: 20px;
@@ -24,7 +24,7 @@
   }
 
   .hero h2 {
-    padding: 88px 60px;
+    padding: 88px 60px 0;
     font-size: 32px;
     line-height: 50px;
   }
@@ -37,6 +37,6 @@
   }
 
   .hero h2 {
-    padding: 120px 104px;
+    padding: 120px 104px 0;
   }
 }
