--- a/css/global.css
+++ b/css/global.css
@@ -33,6 +33,17 @@ section {
   margin: 0 auto 88px;
 }
 
+.title {
+  font-size: 28px;
+  font-weight: var(--title-weight);
+}
+
+.text {
+  font-size: 20px;
+  font-weight: var(--text-weight);
+  line-height: 32px;
+}
+
 .section-title h2 {
   font-size: 28px;
   font-weight: var(--title-weight);
