--- a/css/hero.css
+++ b/css/hero.css
@@ -9,7 +9,9 @@
 .hero h2 {
   padding: 88px 24px 0;
   margin: 0;
-  text-align: center;
+  text-align: center;font-size: 20px;
+  font-weight: var(--text-weight);
+  line-height: 32px;
 }
 
 @media screen and (min-width: 768px) {
