--- a/css/fundo.css
+++ b/css/fundo.css
@@ -35,6 +35,10 @@ main {
   font-size: 16px;
 }
 
+main p {
+  margin-bottom: 8px;
+}
+
 .sociais-fundo {
   margin-top: 32px;
 }
@@ -46,4 +50,33 @@ main {
 .icons-sociais-fundo span i {
   font-size: 28px;
   margin-left: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .text-fundo {
+    width: 648px;
+  }
+  .content-fundo {
+    height: 300px;
+  }
+  main {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1439px) {
+  .text-fundo {
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .informations-fundo {
+    text-align: left;
+  }
+  .informations-fundo header img {
+    margin: 0 0 16px;
+  }
+  .content-fundo {
+    height: 232px;
+  }
 }
